--- a/Barbearia Alura/style-home.css
+++ b/Barbearia Alura/style-home.css
@@ -1,5 +1,5 @@
 #banner {
-	width:100%;
+	width: 50%;
 }
 
 .principal{
@@ -7,8 +7,12 @@
 	padding: 30px;
 }
 
+.menu{
+	background: #CCCCCC;
+}
+
 .titulo-principal {
-	padding-left: 20px;
+	text-align: center;
 }
 
 .titulo-centralizado {
@@ -44,5 +48,6 @@ ul {
 }
 
 .imagembeneficios {
-	width: 50%;
+	width: 30%;
+
 }
